// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToastNotificationsReducers should handle any httpStatus within the 5XX range: 503 rejected type 1`] = `
Object {
  "result": Object {
    "displayedToasts": 1,
    "paused": false,
    "toasts": Array [
      Object {
        "alertType": "error",
        "header": "Error",
        "message": "Network Error",
        "persistent": true,
      },
    ],
  },
  "type": "TEST_TYPE_REJECTED",
}
`;

exports[`ToastNotificationsReducers should handle any httpStatus within the 5XX range: rejected type 1`] = `
Object {
  "result": Object {
    "displayedToasts": 1,
    "paused": false,
    "toasts": Array [
      Object {
        "alertType": "error",
        "header": "Error",
        "message": "Network Error",
        "persistent": false,
      },
    ],
  },
  "type": "TEST_TYPE_REJECTED",
}
`;
